@@ -2,6 +2,7 @@
 v3.0.9-git
 ----------
 
+[jan] Fix sorting by owner if displaying external task sources.
 [jan] Update Turkish translation (İstanbul Technical University).
 
 
